--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -91,6 +91,19 @@
     margin-top : 1em;
 }
 
+.post .contents :is(ul, ol, dl, p) {
+    font-size  : 1.1em;
+    line-height: 1.35;
+}
+
+.post .contents li {
+    margin-bottom: var(--space-s);
+}
+
+.post .contents :is(ol, ul) {
+    margin-top: var(--space-s);
+}
+
 .full-width {
     grid-column: 1 / -1;
     width      : 100%;
@@ -143,7 +156,7 @@
 
 @media (min-width: 960px) {
     .page-with-sidebar {
-        display: grid;
+        display              : grid;
         grid-template-columns: 1fr 3fr;
     }
 
