--- a/sass/utilities/shapes.scss
+++ b/sass/utilities/shapes.scss
@@ -15,3 +15,19 @@
 .portrait {
     aspect-ratio: 9/16
 }
+
+$radii: xs, s, m, l, xl, xxl;
+
+@each $radius in $radii {
+    .border-radius-#{$radius} {
+        border-radius: var(--space-#{$radius}) !important;
+    }
+}
+
+.border-radius {
+    border-radius: var(--border-radius) !important;
+}
+
+.border-radius-none {
+    border-radius: 0 !important;
+}
