--- a/sass/utilities/alignment.scss
+++ b/sass/utilities/alignment.scss
@@ -129,3 +129,13 @@ $alignments: normal, stretch, center, start, end, flex-start, flex-end, baseline
         align-self: $alignment;
     }
 }
+
+.align-self-stretch,
+.align-items-stretch > * {
+    height: 100%;
+}
+
+.justify-items-stretch > *,
+.justify-self-stretch {
+    width: 100%;
+}
