--- a/sass/index.scss
+++ b/sass/index.scss
@@ -27,6 +27,7 @@
 @import "components/side-note.scss";
 @import "components/banner.scss";
 @import "components/live-example.scss";
+@import "components/progress-marker.scss";
 
 /* OVERRIDING UTILITIES */
 @import "utility.scss";
