--- a/sass/components/live-example.scss
+++ b/sass/components/live-example.scss
@@ -4,7 +4,7 @@
     border       : 1px solid var(--bg-2);
 }
 
-.live-example > *:first-child:not(:only-child) {
+.live-example>*:first-child:not(:only-child) {
     border-bottom: 1px solid var(--bg-2);
 }
 
@@ -15,7 +15,7 @@
 }
 
 .live-example__result {
-    padding      : var(--space-xl);
+    padding: var(--space-xl);
     background-image:
         linear-gradient(#fffc, #fffc),
         url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 150 0)' fill='%23D4D4D4'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 50 0)' fill='%23FAFAFA'/%3E%3Crect x='-50' y='50' width='100' height='50' fill='%23D4D4D4'/%3E%3Crect x='50' y='50' width='100' height='50' fill='%23FAFAFA'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Crect width='100' height='100' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
@@ -25,6 +25,13 @@
 .dim.live-example__result {
     background-image: linear-gradient(#0003, #0003),
         url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 150 0)' fill='%23D4D4D4'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 50 0)' fill='%23FAFAFA'/%3E%3Crect x='-50' y='50' width='100' height='50' fill='%23D4D4D4'/%3E%3Crect x='50' y='50' width='100' height='50' fill='%23FAFAFA'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Crect width='100' height='100' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+
+@media (prefers-color-scheme: dark) {
+    .live-example__result {
+        background-image: linear-gradient(#000c, #000c),
+            url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0)'%3E%3Crect width='100' height='100' fill='white'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 150 0)' fill='%23D4D4D4'/%3E%3Crect width='100' height='50' transform='matrix(-1 0 0 1 50 0)' fill='%23FAFAFA'/%3E%3Crect x='-50' y='50' width='100' height='50' fill='%23D4D4D4'/%3E%3Crect x='50' y='50' width='100' height='50' fill='%23FAFAFA'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0'%3E%3Crect width='100' height='100' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+    }
 }
 
 .live-example__code {
