--- a/docs/_includes/components/download.html
+++ b/docs/_includes/components/download.html
@@ -4,11 +4,20 @@
 {% if include.hasContainer == nil or include.hasContainer %}<div class="relative {{ include.containerModifier }}">{% endif %}
 {%if separatedDropdown %}
 <div class="button-group {{ include.groupModifier }}">
-<a href="https://github.com/antaresprogramming/zirconium/releases" class="primary button {{ include.linkModifier }} {{ include.modifier }}">
+<a 
+    href="https://github.com/antaresprogramming/zirconium/releases"
+    class="primary button {{ include.linkModifier }} {{ include.modifier }}"
+    {{ include.linkAttrs }}
+>
 Download v0.0.2-alpha
 </a>
-<div class="">
-    <button class="no-border button {{ include.dropdownButtonModifier }} {{ include.modifier }}" data-toggle style="height: 100%; {{ include.dropdownButtonModifier }}">
+<div {{ include.dropdownAttrs }}>
+    <button
+        class="button {{ include.dropdownButtonModifier }}{{ include.modifier }}"
+        data-toggle
+        style="height: 100%; {{ include.dropdownButtonStyle }}"
+        {{ include.dropdownButtonAttrs }}
+    >
         <div class="visually-hidden">Dropdown</div>
         {% include feathericons/chevron-down.svg %}
     </button>
@@ -26,17 +35,17 @@ Download v0.0.2-alpha
 </div>
 {% else %}
 <button class="button {{ include.modifier }}" data-toggle>
-    Download v0.0.2-alpha
+    <span {{ include.dropdownButtonAttrs }}>Download Latest Release</span>
 {% include feathericons/chevron-down.svg %}
 </button>
 <div class="absolute bordered margin-top-s level-2 raised dropdown {{ include.dropdownModifier }}">
-    <a href="https://github.com/antaresprogramming/zirconium/releases/download/v0.0.2-alpha/zirconium.zip" class="nav-item" download>
+    <a class="nav-item" download data-zipball>
         {% include feathericons/package.svg %}
-        <span class="nav-item__main"> zirconium.zip (47.7 KB) </span>
+        <span class="nav-item__main"> zirconium.zip </span>
     </a>
-    <a href="https://github.com/antaresprogramming/zirconium/releases/download/v0.0.2-alpha/zirconium.tar.gz" class="nav-item" download>
+    <a class="nav-item" download data-tarball>
         {% include feathericons/package.svg %}
-        <span class="nav-item__main"> zirconium.tar.gz file (23.9 KB) </span>
+        <span class="nav-item__main"> zirconium.tar.gz </span>
     </a>
 </div>
 {% endif %}
