--- a/sass/components/badge.scss
+++ b/sass/components/badge.scss
@@ -5,7 +5,6 @@
     font-weight     : 600;
     padding         : var(--space-xs) var(--space-s);
     text-decoration : none;
-    transition      : background-color 300ms;
 
     --bg-color   : var(--bg-1);
     --focus-color: var(--bg-2);
@@ -26,6 +25,7 @@
     padding: var(--space-s) var(--space-l);
 }
 
+button.badge:hover,
 a.badge[href]:hover {
     background-color: var(--hover-color);
 }
@@ -97,4 +97,9 @@ a.badge[href]:hover {
     display    : flex;
     flex-wrap  : wrap;
     gap        : var(--space, var(--space-s));
+}
+
+.badge.outline {
+    background: transparent;
+    border: 1px solid var(--text-color);
 }
