--- a/sass/index.scss
+++ b/sass/index.scss
@@ -15,6 +15,7 @@
 @import "components/byline.scss";
 @import "components/card.scss";
 @import "components/code-snippet.scss";
+@import "components/dialog.scss";
 @import "components/disclosure.scss";
 @import "components/dropdown.scss";
 @import "components/figure.scss";
